# llm-zoomcamp-2026-code

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
01-agentic-rag/: Untitled.ipynb  agent.py  ingest.py  rag_helper.py  rag_ingest.ipynb
01-agentic-rag/.ipynb_checkpoints/: ingest-checkpoint.py
02-vector-search/: README.md  homework.ipynb  vector_search.py  vector_search_demo.ipynb
03-orchestration/: ANSWERS.txt  kill-docker.sh
04-evaluation/: README.md  bacterio_compat.py  evaluation_utils.py  homework.ipynb  rag_helper.py
