[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "gitsource>=0.0.5",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlite-vec>=0.1.9",
    "sqlitesearch>=0.1.0",
    "toyaikit>=0.0.11",
]
